# md2html

./: Dockerfile  README.md  build_docker_image.sh  pyproject.toml  requirements-dev.txt  requirements-run.txt  requirements.txt  setup.py
.gitea/workflows/: build.yaml
conf/: log.yml  pip.conf  uwsgi.ini
docker/: Dockerfile  uwsgi.ini
md2html/: md2html.py  uwsgi.py
md2html/static/: hot-reload.js  template.html
src/bugis/: asgi.py  async_watchdog.py  file_watch.py  server.py
src/bugis/default-conf/: logging.yaml
src/bugis/static/: hot-reload.js  template.html
src/md2html/: file_watch.py  md2html.py  server.py  uwsgi_handler.py
test/: README.md
